@@ -270,11 +270,12 @@ static void rmsavereq(struct savereq *req)
  * is a list of 8-bit characters. yyyy is a list of UTF-8 characters.
  */
 
-unsigned char *yes_string = (unsigned char *) _("yY");
-unsigned char *no_string = (unsigned char *) _("nN");
+unsigned char *yes_key = (unsigned char *) _("yY");
+unsigned char *no_key = (unsigned char *) _("nN");
 
-int yncheck(unsigned char *set, int c)
+int yncheck(unsigned char *key_set, int c)
 {
+	unsigned char *set = joe_gettext(key_set);
 	if (locale_map->type) {
 		/* 'c' is unicode */
 		while (*set) {
@@ -304,7 +305,7 @@ int ynchecks(unsigned char *set, unsigned char *s)
 static int saver(BW *bw, int c, struct savereq *req, int *notify)
 {
 	int fl;
-	if (c == NO_CODE || yncheck(no_string, c)) {
+	if (c == NO_CODE || yncheck(no_key, c)) {
 		msgnw(bw->parent, joe_gettext(_("Couldn't make backup file... file not saved")));
 		if (req->callback) {
 			return req->callback(bw, req, -1, notify);
@@ -316,7 +317,7 @@ static int saver(BW *bw, int c, struct savereq *req, int *notify)
 			return -1;
 		}
 	}
-	if (c != YES_CODE && !yncheck(yes_string, c)) {
+	if (c != YES_CODE && !yncheck(yes_key, c)) {
 		if (mkqw(bw->parent, sz(joe_gettext(_("Could not make backup file.  Save anyway (y,n,^C)? "))), saver, NULL, req, notify)) {
 			return 0;
 		} else {
@@ -447,9 +448,9 @@ static int dosave(BW *bw, struct savereq *req, int *notify)
 
 static int dosave2(BW *bw, int c, struct savereq *req, int *notify)
 {
-	if (c == YES_CODE || yncheck(yes_string, c)) {
+	if (c == YES_CODE || yncheck(yes_key, c)) {
 		return dosave(bw, req, notify);
-	} else if (c == NO_CODE || yncheck(no_string, c)) {
+	} else if (c == NO_CODE || yncheck(no_key, c)) {
 		if (notify) {
 			*notify = 1;
 		}
@@ -555,7 +556,7 @@ int doedit1(BW *bw,int c,unsigned char *s,int *notify)
 	void *object;
 	W *w;
 	B *b;
-	if (c == YES_CODE || yncheck(yes_string, c)) {
+	if (c == YES_CODE || yncheck(yes_key, c)) {
 		/* Reload from file */
 
 		if (notify) {
@@ -602,7 +603,7 @@ int doedit1(BW *bw,int c,unsigned char *s,int *notify)
 		mid = omid;
 		
 		return ret;
-	} else if (c == NO_CODE || yncheck(no_string, c)) {
+	} else if (c == NO_CODE || yncheck(no_key, c)) {
 		/* Edit already loaded buffer */
 
 		if (notify) {
@@ -917,12 +918,12 @@ int uexsve(BW *bw)
 
 static int nask(BW *bw, int c, void *object, int *notify)
 {
-	if (c == YES_CODE || yncheck(yes_string, c)) {
+	if (c == YES_CODE || yncheck(yes_key, c)) {
 		/* uexsve macro should be here... */
 		if(notify)
 			*notify = 1;
 		return 0;
-	} else if (c == NO_CODE || yncheck(no_string, c)) {
+	} else if (c == NO_CODE || yncheck(no_key, c)) {
 		if(notify)
 			*notify = -1;
 		genexmsg(bw, 0, NULL);
@@ -959,7 +960,7 @@ static int dolose(BW *bw, int c, void *object, int *notify)
 	if (notify) {
 		*notify = 1;
 	}
-	if (c != YES_CODE && !yncheck(yes_string, c)) {
+	if (c != YES_CODE && !yncheck(yes_key, c)) {
 		return -1;
 	}
 
@@ -1094,7 +1095,7 @@ int ubufed(BW *bw)
 static int doquerysave(BW *bw,int c,struct savereq *req,int *notify)
 {
 	W *w = bw->parent;
-	if (c == YES_CODE || yncheck(yes_string, c)) {
+	if (c == YES_CODE || yncheck(yes_key, c)) {
 		if (bw->b->name && bw->b->name[0])
 			return dosave1(bw, vsncpy(NULL,0,sz(bw->b->name)), req, notify);
 		else {
@@ -1108,7 +1109,7 @@ static int doquerysave(BW *bw,int c,struct savereq *req,int *notify)
 				return -1;
 			}
 		}
-	} else if (c == NO_CODE || yncheck(no_string, c)) {
+	} else if (c == NO_CODE || yncheck(no_key, c)) {
 		/* Find next buffer to save */
 		if (bw->b->changed)
 			req->not_saved = 1;
