@@ -70,7 +70,9 @@ extern int pico;
 extern unsigned char srchstr[];
 extern SRCH *globalsrch;
 
-extern unsigned char *rest_string;
-extern unsigned char *backup_string;
+extern unsigned char *rest_key;
+extern unsigned char *backup_key;
+
+int fwrd_c PARAMS((unsigned char **s));
 
 #endif
